cmake_minimum_required(VERSION 3.11)


add_subdirectory(sprint1/problems/sum/solution)
add_subdirectory(sprint1/problems/radio/solution)
add_subdirectory(sprint1/problems/seabattle/solution)
add_subdirectory(sprint1/problems/sync_server/solution)
add_subdirectory(sprint1/problems/restaurant_single_threaded/solution)
add_subdirectory(sprint1/problems/cafeteria/solution)